# winit-wgpu-egui-template

./: Cargo.toml  README.md
app/: Cargo.toml
renderer/: Cargo.toml
renderer/src/: main.rs
renderer/src/shaders/: shader.wgsl
static/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs  run_wasm.rs
