[package]
name = "app"
version = "0.1.0"
edition = "2021"
default-run = "app"

[dependencies]
egui = "0.28"
egui-wgpu = "0.28"
encase = "0.9.0"
wgpu = "0.20"
winit = "0.29.15"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
egui-winit = "0.28"
env_logger = "0.11.5"
image = { version = "0.25.2", default-features = false, features = ["png"] }
pollster = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.28", default-features = false }
fern = "0.6.2"
wgpu = { version = "0.20", features = ["webgpu"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = [
    "Location",
    "Blob",
    "RequestInit",
    "RequestMode",
    "Request",
    "ImageData",
    "Response",
    "HtmlImageElement",
    "WebGl2RenderingContext",
    "CanvasRenderingContext2d",
] }
